tests/ui/explicit-tail-calls/return-mismatches.stderr
error[E0308]: mismatched types
  --> $DIR/return-mismatches.rs:5:5
   |
LL |     become _g0();
   |     ^^^^^^^^^^^^ expected `&[u8]`, found `&[u8; 1]`
   |
   = note: expected reference `&'static [u8]`
              found reference `&'static [u8; 1]`

error[E0308]: mismatched types
  --> $DIR/return-mismatches.rs:13:5
   |
LL |     become _g1();
   |     ^^^^^^^^^^^^ expected `()`, found `!`
   |
   = note: expected unit type `()`
                   found type `!`

error[E0308]: mismatched types
  --> $DIR/return-mismatches.rs:21:5
   |
LL |     become _g2();
   |     ^^^^^^^^^^^^ expected `u32`, found `u16`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
